# mk122qta

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml
apps/mk_autonomy_worker/: pyproject.toml
apps/mk_autonomy_worker/src/mk_autonomy_worker/: __init__.py  main.py
apps/mk_chaos_runner/: pyproject.toml
apps/mk_chaos_runner/src/mk_chaos_runner/: __init__.py  main.py
apps/mk_dashboard/: pyproject.toml
apps/mk_dashboard/src/mk_dashboard/: __init__.py  main.py
apps/mk_dashboard/tests/unit/: test_dashboard.py
apps/mk_executor_app/: pyproject.toml
apps/mk_executor_app/src/mk_executor_app/: __init__.py  main.py
apps/mk_learning_worker/: pyproject.toml
apps/mk_learning_worker/src/mk_learning_worker/: __init__.py  main.py
apps/mk_live_guard/: pyproject.toml
apps/mk_live_guard/src/mk_live_guard/: __init__.py  main.py
apps/mk_orchestrator/: pyproject.toml
apps/mk_orchestrator/src/mk_orchestrator/: __init__.py  main.py
apps/mk_risk_gate/: pyproject.toml
apps/mk_risk_gate/src/mk_risk_gate/: __init__.py  main.py
apps/mk_signal_engine/: pyproject.toml
apps/mk_signal_engine/src/mk_signal_engine/: __init__.py  main.py
apps/mk_strategy_runner/: pyproject.toml
apps/mk_strategy_runner/src/mk_strategy_runner/: __init__.py  main.py
configs/: base.yaml  dev.yaml  secrets.local.yaml.example
docs/: index.md
docs/PRD/: v2.1.md
docs/architecture/: project-framework.md  visualization.md
docs/architecture/adr/: 0001-monorepo-uv-workspace.md  0002-python-pydantic-contracts.md  0003-event-bus-nats-redis.md  0004-gmm-market-state.md  0005-self-built-matching-engine.md  0006-actor-model.md  0007-delta-duckdb-lakehouse.md
docs/guides/: development-plan.md  progress.md
tests/integration/: test_p0_data_to_backtest.py  test_p1_single_strategy_flow.py  test_p2_factor_racing_flow.py  test_p3_multi_strategy_flow.py  test_p4_online_learning_flow.py  test_p5_p6_p7_full_completion.py
