[project]
name = "mk-chaos-runner"
version = "0.1.0"
description = "Chaos validation runner for MK122 P5"
requires-python = ">=3.11"
dependencies = [
    "mk-chaos",
]

[project.scripts]
mk-chaos-runner = "mk_chaos_runner.main:main"

[tool.uv.sources]
mk-chaos = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_chaos_runner"]
