[project]
name = "mk-dashboard"
version = "0.1.0"
description = "Read-only dashboard BFF and page skeleton for MK122 P1"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "mk-autonomy",
    "mk-chaos",
    "mk-live",
    "mk-risk",
    "mk-simulation",
    "uvicorn>=0.30",
]

[project.scripts]
mk-dashboard = "mk_dashboard.main:main"

[tool.uv.sources]
mk-autonomy = { workspace = true }
mk-chaos = { workspace = true }
mk-live = { workspace = true }
mk-risk = { workspace = true }
mk-simulation = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_dashboard"]
