[project]
name = "mk-executor-app"
version = "0.1.0"
description = "Executor app skeleton for MK122 P1"
requires-python = ">=3.11"
dependencies = [
    "mk-execution",
    "mk-strategies",
]

[project.scripts]
mk-executor = "mk_executor_app.main:main"

[tool.uv.sources]
mk-execution = { workspace = true }
mk-strategies = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_executor_app"]
