[project]
name = "mk-learning-worker"
version = "0.1.0"
description = "Online learning worker app skeleton for MK122 P4"
requires-python = ">=3.11"
dependencies = [
    "mk-learning",
]

[project.scripts]
mk-learning-worker = "mk_learning_worker.main:main"

[tool.uv.sources]
mk-learning = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_learning_worker"]
