[project]
name = "mk-orchestrator"
version = "0.1.0"
description = "Meta orchestrator app skeleton for MK122 P3"
requires-python = ">=3.11"
dependencies = [
    "mk-meta",
]

[project.scripts]
mk-orchestrator = "mk_orchestrator.main:main"

[tool.uv.sources]
mk-meta = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_orchestrator"]
