[project]
name = "mk-risk-gate"
version = "0.1.0"
description = "Risk gate app skeleton for MK122 P1"
requires-python = ">=3.11"
dependencies = [
    "mk-risk",
]

[project.scripts]
mk-risk-gate = "mk_risk_gate.main:main"

[tool.uv.sources]
mk-risk = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_risk_gate"]
