[project]
name = "mk-signal-engine"
version = "0.1.0"
description = "Signal engine app placeholder for MK122"
requires-python = ">=3.11"
dependencies = [
    "mk-common",
    "mk-data",
]

[project.scripts]
mk-signal-engine = "mk_signal_engine.main:main"

[tool.uv.sources]
mk-common = { workspace = true }
mk-data = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_signal_engine"]
