[project]
name = "mk-strategy-runner"
version = "0.1.0"
description = "Strategy runner app skeleton for MK122 P1"
requires-python = ">=3.11"
dependencies = [
    "mk-data",
    "mk-signals",
    "mk-strategies",
]

[project.scripts]
mk-strategy-runner = "mk_strategy_runner.main:main"

[tool.uv.sources]
mk-data = { workspace = true }
mk-signals = { workspace = true }
mk-strategies = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mk_strategy_runner"]
